--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -7,8 +7,8 @@
 
 @if (Model != null && Model.Logs != null)
 {
-    <div class="tab-pane tab-pane-border active" id="logtab">
-        <table class="table table-striped table-bordered table-hover caselog">
+<div class="tab-pane tab-pane-border active" id="logtab">
+    <table class="table table-striped table-bordered table-hover caselog">
         @if (Model.Logs.Any())
         {
             <thead>
@@ -29,7 +29,7 @@
                 {
                     if (Model.CaseInternalLogAccess || !string.IsNullOrEmpty(r.TextExternal))
                     {
-                        <tr id="@r.Id">
+                        <tr id="@r.Id" class='@(r.Id == Model.Logs.First().Id ? "less7" : "less3")'>
                             @* Date Log note cell *@
                             <td style="max-width: 105px">
                                 @if (r.FinishingDate.HasValue)
@@ -51,7 +51,14 @@
                             @if (isExternalLogVisible)
                             {
                             <td class="wordbreak" style="width: 25%; max-width: 300px">
-                                <a href="@GetLogLink(r)"> @Html.Encode(r.TextExternal).ForHtmlView()</a>
+                                <a href="@GetLogLink(r)">
+                                    <div style="display:block;">
+                                        <div style="display: inline;">
+                                            @Html.Encode(r.TextExternal).ForHtmlView()
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="row-all" href="" style="display:none"></a>
                             </td>
                             }
 
@@ -59,7 +66,14 @@
                             <td class="wordbreak" style="@(isExternalLogVisible ? "width: 25%; max-width: 300px" : "width: 40%; max-width: 300px")">
                                 @if (Model.CaseInternalLogAccess)
                                 {
-                                    <a href="@GetLogLink(r)"> @Html.Encode(r.TextInternal).ForHtmlView()</a>
+                                    <a href="@GetLogLink(r)">
+                                        <div style="display:block;">
+                                            <div style="display: inline;">
+                                                @Html.Encode(r.TextInternal).ForHtmlView()
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a class="row-all" href="" style="display:none"></a>
                                 }
                             </td>
 
@@ -70,15 +84,24 @@
 
                             @* Log Files: *@
                             <td class="wordbreak" style="max-width: 150px">
-                              @Html.Partial("_LogNoteFiles", Model.CreateFilesViewModel(r))
+                                @Html.Partial("_LogNoteFiles", Model.CreateFilesViewModel(r))
                             </td>
                         </tr>
-                        }
+                    }
                 }
             </tbody>
         }
-        </table>
-    </div>
+    </table>
+    @if (Model.Logs != null && Model.Logs.Count() > 3)
+    {
+        <div class="all more">
+            <a href="">Show all Case logs >></a>
+        </div>
+        <div class="all less" style="display: none">
+            <a href="">Show less Case logs <<</a>
+        </div>
+    }
+</div>
 }
 
 @functions
