--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -395,14 +395,14 @@
                                 && (Model.CaseLog.InvoiceRow.Status.Value == InvoiceStatus.Invoiced || Model.CaseLog.InvoiceRow.Status.Value == InvoiceStatus.NotInvoiced);
         }
         <div class="row">
-            <div class="span12">
+            <div class="span6">
                 <table class="tableform">
                     <thead>
-                        <tr>
-                            <th class="span3"></th>
-                            <th class="span4"></th>
-                            <th class="span5"></th>
-                        </tr>
+                    <tr>
+                        <th class="span3"></th>
+                        <th class="span4"></th>
+                        <th class="span5"></th>
+                    </tr>
                     </thead>
 
                     <tr id="invoiceField-Time">
@@ -506,6 +506,53 @@
                         </td>
                         <td></td>
                     </tr>
+                </table>
+            </div>
+            <div class="span6">
+                <table id="tblCaseChargeSummary" style="@Model.ShowInvoiceFields.displayHtml()">
+                    <tbody>
+                        @if (Model.case_.Department != null)
+                        {
+                            if (Model.case_.Department.ShowInvoiceTime)
+                            {
+                                <tr>
+                                    <td>@Translation.GetCoreTextTranslation("Totalt") @Translation.GetCoreTextTranslation("Arbete"):</td>
+                                    <td id="totalWorkingTime">
+                                        @(Model.Logs.Sum(x => x.WorkingTime) / 60) @Translation.GetCoreTextTranslation("Tim")
+                                        @(Model.Logs.Sum(x => x.WorkingTime) % 60) @Translation.GetCoreTextTranslation("Min")
+                                    </td>
+                                </tr>
+                            }
+                            if (Model.case_.Department.ShowInvoiceOvertime)
+                            {
+                                <tr>
+                                    <td>@Translation.GetCoreTextTranslation("Totalt") @Translation.GetCoreTextTranslation("Övertid"):</td>
+                                    <td id="totalOvertime">
+                                        @(Model.Logs.Sum(x => x.OverTime) / 60) @Translation.GetCoreTextTranslation("Tim")
+                                        @(Model.Logs.Sum(x => x.OverTime) % 60) @Translation.GetCoreTextTranslation("Min")
+                                    </td>
+                                </tr>
+                            }
+                            if (Model.case_.Department.ShowInvoiceMaterial)
+                            {
+                                <tr>
+                                    <td>@Translation.GetCoreTextTranslation("Totalt") @Translation.GetCoreTextTranslation("Material"):</td>
+                                    <td id="totalMaterial">
+                                        @Model.Logs.Sum(x => x.EquipmentPrice).ToString("0.00")
+                                    </td>
+                                </tr>
+                            }
+                            if (Model.case_.Department.ShowInvoicePrice)
+                            {
+                                <tr>
+                                    <td>@Translation.GetCoreTextTranslation("Totalt") @Translation.GetCoreTextTranslation("Pris"):</td>
+                                    <td id="totalPrice">
+                                        @Model.Logs.Sum(x => x.Price).ToString("0.00")
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
                 </table>
             </div>
         </div>
