--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -94,11 +94,11 @@
     </table>
     @if (Model.Logs != null && Model.Logs.Count() > 3)
     {
-        <div class="all more">
-            <a href="">Show all Case logs >></a>
-        </div>
+    <div class="all more">
+        <a href="">@Translation.GetCoreTextTranslation("Visa hela Ärendeloggen") >></a>
+    </div>
         <div class="all less" style="display: none">
-            <a href="">Show less Case logs <<</a>
+            <a href="">@Translation.GetCoreTextTranslation("Göm hela ärendeloggen") <<</a>
         </div>
     }
 </div>
