--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
@@ -64,6 +64,13 @@
                         </div>
                         <br />
                         <div class="form-group col-md-10">
+                            <div class="col-sm-1 input-group workflowStepsPanel" style="display: none">
+                                <select name="steps" class="dropdown-group workflows-select" id="steps">
+                                    @* options are populated from client via ajax request - see workflowStepsBehavior.js*@
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-10">
                             <a id="btnSendLog" data-src="communication" role="button" class="btn btn-default">@Translation.Get("Send")</a>
                             <i id="sendLogIndicator" style="display: none" class="gif-loader">&nbsp;</i>
                         </div>
